Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-3557

open(2) an existing file with O_RDONLY|O_CREAT fails with -EROFS, ro mounted client

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.5.0
    • Lustre 2.4.0
    • 3
    • 8959

      Currently with a read only mount, open(2) with O_RDONLY|O_CREAT will fail with -EROFS, no matter the file exists or not.
      If the file is already there and we don't need to create the file, we should make the open work.
      The gcc-fortran runtime tends to add O_CREAT flag when it's trying to open a file, this prevents us from using the fortran based apps.

            emoly.liu Emoly Liu
            lidongyang Li Dongyang (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: